--- a/app.json
+++ b/app.json
@@ -12,7 +12,8 @@
     "pages/editUserInfo/weixin/weixin",
     "pages/acticle/index",
     "pages/list/list",
-    "pages/infoList/infoList"
+    "pages/infoList/infoList",
+    "pages/specific/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
