--- a/components/lib/config.json
+++ b/components/lib/config.json
@@ -1,7 +1,8 @@
 {
     "components": [
         "card",
-        "wing-blank"
+        "wing-blank",
+        "multi-picker-view"
     ],
     "themes": {
         "light": "white"
